--- a/_layouts/clients.html
+++ b/_layouts/clients.html
@@ -5,7 +5,26 @@ layout: default
 
 <section>
     <div class="mb6">
-        <h1 class="f1 mt4 mb3 tc">{{lang.clients-title}}</h1>
+        <h1 class="f2 f1-l mt4 mb3 tc">{{lang.retailers-title}}</h1>
+        <div class="center tc measure gray f4 serif">
+            {{lang.retailers-text}}
+        </div>
+    </div>
+    <div class="flex flex-column flex-row-l flex-wrap items-center items-top-l justify-around mb5 nl4 nr4">
+        {% for retailer in site.data.clients[page.lang].retailers %}
+            <a href="{{retailer.url}}" class="no-underline dark-gray grow w-50 w-20-l mb6 mt0-l mb4-l mh0 mh3-l">
+                <div class="h4 mb3 flex items-center items-center justify-center">
+                    <img class="max-h-100" src="{{retailer.logo}}" alt="{{retailer.image}} logo"/>
+                </div>
+                <div class="label tc f6">{{retailer.name}}</div>
+            </a>
+        {% endfor %}
+    </div>
+</section>
+
+<section>
+    <div class="mb6">
+        <h2 class="f1 mt4 mb3 tc">{{lang.clients-title}}</h2>
         <div class="center tc measure gray f4 serif">
             {{lang.clients-text}}
         </div>
@@ -23,20 +42,13 @@ layout: default
 </section>
 
 <section>
-    <div class="mb6">
-        <h1 class="f2 f1-l mt4 mb3 tc">{{lang.retailers-title}}</h1>
-        <div class="center tc measure gray f4 serif">
-            {{lang.retailers-text}}
-        </div>
-    </div>
-    <div class="flex flex-column flex-row-l flex-wrap items-center items-top-l justify-around mb5 nl4 nr4">
-        {% for retailer in site.data.clients[page.lang].retailers %}
-            <a href="{{retailer.url}}" class="no-underline dark-gray grow w-50 w-20-l mb6 mt0-l mb4-l mh0 mh3-l">
-                <div class="h4 mb3 flex items-center items-center justify-center">
-                    <img class="max-h-100" src="{{retailer.logo}}" alt="{{retailer.image}} logo"/>
-                </div>
-                <div class="label tc f6">{{retailer.name}}</div>
-            </a>
-        {% endfor %}
+    <div class="w-two-thirds-l center white br3 pa5 tc" style="
+    background:linear-gradient(0deg, rgba(0, 0, 0, 0.5),
+    rgba(0, 0, 0, 0.5)), 
+    url('/assets/abstract-bg-3.jpg');
+    background-size:cover;
+    ">
+        <h2 class="f3 f2-l mt3">{{lang.cta.title}}</h2>
+        <a href="/{{page.lang}}/contact" class="button">{{lang.cta.button}}</a>
     </div>
 </section>
