--- a/_layouts/clients.html
+++ b/_layouts/clients.html
@@ -42,7 +42,7 @@ layout: default
 </section>
 
 <section>
-    <div class="w-two-thirds-l center white br3 pa5 tc" style="
+    <div class="w-two-thirds-l center white br3 pa4 pa5-l tc lh-title" style="
     background:linear-gradient(0deg, rgba(0, 0, 0, 0.5),
     rgba(0, 0, 0, 0.5)), 
     url('/assets/abstract-bg-3.jpg');
