--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -26,7 +26,7 @@ layout: default
         </div>
     </section>
     <section class="pv0">
-        <img class="w-100" src="{{page.main-image}}" alt="">
+        <img class="w-100" src="{{page.image}}" alt="">
     </section>
     <section id="article">
         <div class="measure-wide center dark-gray">
