--- a/_layouts/clients.html
+++ b/_layouts/clients.html
@@ -10,7 +10,7 @@ layout: default
             {{lang.retailers-text}}
         </div>
     </div>
-    <div class="flex flex-column flex-row-l flex-wrap items-center items-top-l justify-around mb5 nl4 nr4">
+    <div class="flex flex-column flex-row-l flex-wrap items-center items-top-l justify-around mb5 nl4-l nr4-l">
         {% for retailer in site.data.clients[page.lang].retailers %}
             <a href="{{retailer.url}}" class="no-underline dark-gray grow w-50 w-20-l mb6 mt0-l mb4-l mh0 mh3-l">
                 <div class="h4 mb3 flex items-center items-center justify-center">
@@ -29,7 +29,7 @@ layout: default
             {{lang.clients-text}}
         </div>
     </div>
-    <div class="flex flex-column flex-row-l flex-wrap items-center items-top-l justify-around mb5 nl4 nr4">
+    <div class="flex flex-column flex-row-l flex-wrap items-center items-top-l justify-around mb5 nl4-l nr4-l">
         {% for client in site.data.clients[page.lang].clients %}
             <div class="w-50 w-20-l mb6 mt0-l mb4-l mh0 mh3-l">
                 <div class="h4 mb3 flex items-center justify-center">
