--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -54,7 +54,7 @@
                 background-size:cover;
                 height: 200px;
             ">
-                <h2 class="f1 f-subheadline-l center tc white shadow mv0 lh-tight">{{lang.brands.title}}</h2>
+                <h2 class="f1 f-subheadline-l center tc white shadow mt0 mb3 lh-tight">{{lang.brands.title}}</h2>
             </div>
         </section>
         
