--- a/_layouts/contact.html
+++ b/_layouts/contact.html
@@ -11,7 +11,7 @@ layout: default
         </div>
     </div>
 
-    <form class="w-50-l flex flex-column" action="/{{page.lang}}/success" method="POST" name="Contact Form" netlify>
+    <form class="w-50-l flex flex-column" action="/{{page.lang}}/success/" method="POST" name="Contact Form" netlify>
         <label for="name" class="label mt2 mb2">{{lang.form.name}}</label>
         <input required type="text" name="Name" id="name" class="mb3">
 
