--- a/_layouts/success.html
+++ b/_layouts/success.html
@@ -1,3 +1,14 @@
 ---
 layout: default
 ---
+{% assign lang = site.data.success[page.lang] %}
+
+<section>
+    <div class="w-70-l center bg-beige pa4 pa5-l br3 tc">
+        <svg class="black-40" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="36" height="36"><path fill="none" d="M0 0h24v24H0z"/><path d="M12 22C6.477 22 2 17.523 2 12S6.477 2 12 2s10 4.477 10 10-4.477 10-10 10zm0-2a8 8 0 1 0 0-16 8 8 0 0 0 0 16zm-.997-4L6.76 11.757l1.414-1.414 2.829 2.829 5.656-5.657 1.415 1.414L11.003 16z"/></svg>
+        <h1 class="tc">{{lang.title}}</h1>
+        <div class="lh-copy measure tc center">
+            {{lang.text}}
+        </div>
+    </div>
+</section>
