--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -1,29 +1,81 @@
----
-layout: default
----
-{% assign lang = site.data.about[page.lang] %}
+<!DOCTYPE html>
+<html>
+    <head>
+        {% include head.html %}
+    </head>
+    <body lang="{{page.lang}}" class="">     
+        
+        {% assign lang = site.data.about[page.lang] %}
 
-<section>
-    <div class="measure-wide center dark-gray">
-        {{ lang.main-text | markdownify }}
-    </div>
-</section>
+        <article id="hero" class="bg-hero">
 
-<section class="flex flex-column flex-row-l justify-around ph5 w-90-m w-80-l bg-near-white br4 black-70">
-    <div class="w-40-l">
-        <svg class="black-40" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="36" height="36"><path fill="none" d="M0 0h24v24H0z"/><path d="M3 19V5.7a1 1 0 0 1 .658-.94l9.671-3.516a.5.5 0 0 1 .671.47v4.953l6.316 2.105a1 1 0 0 1 .684.949V19h2v2H1v-2h2zm2 0h7V3.855L5 6.401V19zm14 0v-8.558l-5-1.667V19h5z"/></svg>
-        {{ lang.company-info | markdownify }}
-    </div>
-    <div class="w-20-l mt5 mt0-l">
-        <svg class="black-40" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="36" height="36"><path fill="none" d="M0 0h24v24H0z"/><path d="M22 20.007a1 1 0 0 1-.992.993H2.992A.993.993 0 0 1 2 20.007V19h18V7.3l-8 7.2-10-9V4a1 1 0 0 1 1-1h18a1 1 0 0 1 1 1v16.007zM4.434 5L12 11.81 19.566 5H4.434zM0 15h8v2H0v-2zm0-5h5v2H0v-2z"/></svg>
-        {{ lang.po-box | markdownify }}
-    </div>
-</section>
+            {% include navbar.html %}
 
-<section>
-    <h1 class="f3 f1-l mb4 black-60">{{lang.brand-cta}}</h1>
-    {% include brand-cards.html %}
-</section>
+            <section class="pt3 pb6">
+                <h1 class="f-subheadline mb4 mt5 tc">About Theeta</h1>
+                <div class="f4 w-60-m w-40-l lh-copy o-80">{{lang.subheadline}}</div>    
+                <div class="mt6 black bg-near-white pa5 br3">
+                    {% for block in lang.blocks %}
+                        <div class="flex flex-column flex-row-l mb5">
+                            <div class="w-50-l">
+                                <h2 class="f2 mt3 color-2">{{block.title}}</h2>
+                            </div>
+                            <div class="w-50-l black-80">
+                                {{block.text | markdownify }}
+                            </div>
+                        </div>
+                    {% endfor %}
+                </div>
+            </section>
+        </article>
 
-<script src='https://cdnjs.cloudflare.com/ajax/libs/vue/2.0.1/vue.min.js'></script>
-<script src="/script.js"></script>
+        <section>
+            <form class=" center bg-beige mw7-l pa4 br3 ba b--black-10" action="/{{page.lang}}/success/" method="POST" name="Newsletter Form" netlify >
+            <fieldset class="bn ma0 pa0">
+                <h2 class="pa0 f4 f3-ns black-60 mt0 mb4 flex items-center">
+                    <svg class="mr2 nb1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24"><path fill="none" d="M0 0h24v24H0z"/><path d="M2.243 6.854L11.49 1.31a1 1 0 0 1 1.029 0l9.238 5.545a.5.5 0 0 1 .243.429V20a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1V7.283a.5.5 0 0 1 .243-.429zM4 8.133V19h16V8.132l-7.996-4.8L4 8.132zm8.06 5.565l5.296-4.463 1.288 1.53-6.57 5.537-6.71-5.53 1.272-1.544 5.424 4.47z"/></svg>
+                    Sign up for our newsletter</h2>
+                <div class="flex items-stretch flex-column flex-row-ns">
+                <label class="clip" for="email-address">Email Address</label>
+                <input class="flex-grow-1 f6 f5-l pa3 black-80 bg-white mr3-ns mb3 mb0-ns br3" placeholder="Your Email Address" type="email" name="email-address" value="" id="email-address">
+                <input class="mb0 f6 f5-l label tc button pointer br3" type="submit" value="Subscribe">
+                </div>
+            </fieldset>
+            </form>
+        </section>
+
+        
+        <section class="flex flex-column flex-row-l justify-around ph5-l w-90-m w-80-l br4 black-70">
+            <div class="w-40-l">
+                <svg class="black-40" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="36" height="36"><path fill="none" d="M0 0h24v24H0z"/><path d="M3 19V5.7a1 1 0 0 1 .658-.94l9.671-3.516a.5.5 0 0 1 .671.47v4.953l6.316 2.105a1 1 0 0 1 .684.949V19h2v2H1v-2h2zm2 0h7V3.855L5 6.401V19zm14 0v-8.558l-5-1.667V19h5z"/></svg>
+                {{ lang.company-info | markdownify }}
+            </div>
+            <div class="w-20-l mt5 mt0-l">
+                <svg class="black-40" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="36" height="36"><path fill="none" d="M0 0h24v24H0z"/><path d="M22 20.007a1 1 0 0 1-.992.993H2.992A.993.993 0 0 1 2 20.007V19h18V7.3l-8 7.2-10-9V4a1 1 0 0 1 1-1h18a1 1 0 0 1 1 1v16.007zM4.434 5L12 11.81 19.566 5H4.434zM0 15h8v2H0v-2zm0-5h5v2H0v-2z"/></svg>
+                {{ lang.po-box | markdownify }}
+            </div>
+        </section>
+    
+
+        <section class="">
+            <div class="measure center">
+                {% assign links = site.data.index[page.lang].grid-links | unless: link.url, "about" %}
+                {% for link in links %}
+                    {% unless link.url == 'about' %}
+                    <a href="/{{page.lang}}/{{link.url}}" class="db no-underline mb5 black dim">
+                        <h3 class="label black-50 ">{{link.label}}</h3>
+                        <div class="f4 f3-l lh-solid serif mb2 color-2">{{link.title}}</div>
+                        <p class="black-60">{{link.text}}</p>
+                    </a>
+                    {% endunless %}
+                {% endfor %}
+            </div>
+        </section>
+
+       
+        {% include footer.html %}
+
+        <script src='https://cdnjs.cloudflare.com/ajax/libs/vue/2.0.1/vue.min.js'></script>
+        <script src="/script.js"></script>
+    </body>
+</html>
