--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -12,9 +12,8 @@
             {% include navbar.html %}
 
             <section class="pt3 pb6">
-                <h1 class="f-subheadline mb4 mt5 tc">About Theeta</h1>
-                <div class="f4 w-60-m w-40-l lh-copy o-80">{{lang.subheadline}}</div>    
-                <div class="mt6 black bg-near-white pa5 br3">
+                <h1 class="f-subheadline mb4 mt5 tc">{{lang.h1}}</h1>
+                <div class="mt6 black bg-near-white pa4 pa5-l br3">
                     {% for block in lang.blocks %}
                         <div class="flex flex-column flex-row-l mb5">
                             <div class="w-50-l">
@@ -44,18 +43,20 @@
             </form>
         </section>
 
-        
-        <section class="flex flex-column flex-row-l justify-around ph5-l w-90-m w-80-l br4 black-70">
-            <div class="w-40-l">
-                <svg class="black-40" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="36" height="36"><path fill="none" d="M0 0h24v24H0z"/><path d="M3 19V5.7a1 1 0 0 1 .658-.94l9.671-3.516a.5.5 0 0 1 .671.47v4.953l6.316 2.105a1 1 0 0 1 .684.949V19h2v2H1v-2h2zm2 0h7V3.855L5 6.401V19zm14 0v-8.558l-5-1.667V19h5z"/></svg>
-                {{ lang.company-info | markdownify }}
-            </div>
-            <div class="w-20-l mt5 mt0-l">
-                <svg class="black-40" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="36" height="36"><path fill="none" d="M0 0h24v24H0z"/><path d="M22 20.007a1 1 0 0 1-.992.993H2.992A.993.993 0 0 1 2 20.007V19h18V7.3l-8 7.2-10-9V4a1 1 0 0 1 1-1h18a1 1 0 0 1 1 1v16.007zM4.434 5L12 11.81 19.566 5H4.434zM0 15h8v2H0v-2zm0-5h5v2H0v-2z"/></svg>
-                {{ lang.po-box | markdownify }}
+    
+    
+        <section class="">
+            <div class="center flex flex-column flex-row-l mw7-l black-70 ph4 ">
+                <div class="w-80-l">
+                    <svg class="black-40" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="36" height="36"><path fill="none" d="M0 0h24v24H0z"/><path d="M3 19V5.7a1 1 0 0 1 .658-.94l9.671-3.516a.5.5 0 0 1 .671.47v4.953l6.316 2.105a1 1 0 0 1 .684.949V19h2v2H1v-2h2zm2 0h7V3.855L5 6.401V19zm14 0v-8.558l-5-1.667V19h5z"/></svg>
+                    {{ lang.company-info | markdownify }}
+                </div>
+                <div class="w-20-l mt5 mt0-l">
+                    <svg class="black-40" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="36" height="36"><path fill="none" d="M0 0h24v24H0z"/><path d="M22 20.007a1 1 0 0 1-.992.993H2.992A.993.993 0 0 1 2 20.007V19h18V7.3l-8 7.2-10-9V4a1 1 0 0 1 1-1h18a1 1 0 0 1 1 1v16.007zM4.434 5L12 11.81 19.566 5H4.434zM0 15h8v2H0v-2zm0-5h5v2H0v-2z"/></svg>
+                    {{ lang.po-box | markdownify }}
+                </div>
             </div>
         </section>
-    
 
         <section class="">
             <div class="measure center">
