--- a/_layouts/nav-mobile.html
+++ b/_layouts/nav-mobile.html
@@ -31,7 +31,7 @@
                     {% endfor %}
                 </div>
     
-                <div id="company">
+                <div id="company" class="mb4">
                     <div class="flex">
                         <div class="w-50">
                             <h2 class="f5 label mt4 mb2 o-80">Company</h2>
